--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
